# File_Archiver

./: .gitignore  CMakeLists.txt
include/: cli_parser.h
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
